Reworked recyclarr configs

--- a/recyclarr/configs/radarr2.yml
+++ b/recyclarr/configs/radarr2.yml
@@ -1,8 +1,6 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 radarr:
-  sqp:
-    base_url: https://siffreinsg.ghost.usbx.me/radarr2
-    api_key: !secret radarr_sqp_apikey
+  radarr2:
     delete_old_custom_formats: true
     replace_existing_custom_formats: true
     media_naming:
