--- a/recyclarr/configs/sonarr.yml
+++ b/recyclarr/configs/sonarr.yml
@@ -1,8 +1,6 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 sonarr:
-  anime:
-    base_url: https://siffreinsg.ghost.usbx.me/sonarr
-    api_key: !secret sonarr_apikey
+  sonarr:
     delete_old_custom_formats: true
     replace_existing_custom_formats: true
     quality_definition:
