--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@ url = https://github.com/RemiRigal/Plex-Auto-Languages.git
 [submodule "qbit_manage/qbit_manage"]
 path = qbit_manage/qbit_manage
 url = https://github.com/StuffAnThings/qbit_manage.git
+[submodule "VueTorrent/VueTorrent"]
+	path = VueTorrent/VueTorrent
+	url = https://github.com/VueTorrent/VueTorrent.git
