Use shallow submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "Plex_Auto_Languages/Plex_Auto_Languages"]
 path = Plex_Auto_Languages/Plex_Auto_Languages
 url = https://github.com/RemiRigal/Plex-Auto-Languages.git
+shallow = true
 [submodule "qbit_manage/qbit_manage"]
 path = qbit_manage/qbit_manage
 url = https://github.com/StuffAnThings/qbit_manage.git
+shallow = true
 [submodule "VueTorrent/VueTorrent"]
-	path = VueTorrent/VueTorrent
-	url = https://github.com/VueTorrent/VueTorrent.git
+path = VueTorrent/VueTorrent
+url = https://github.com/VueTorrent/VueTorrent.git
+shallow = true
