Added upload.cx as private tracker

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ DISK_USAGE_THRESHOLD_GB=1000
 APIERR_PORT=8000
 APIERR_LOG_LEVEL='DEBUG'
 APIERR_API_KEY='supersecretkey'
+
+# Overseerr
+OVERSEERR_API_KEY='supersecretkey'
+OVERSEERR_URL='http://overseerr.url:5055'
