Added digitalcore.club to private trackers

--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -66,6 +66,10 @@ tracker:
     tag:
       - uploadcx
       - private
+  digitalcore.club:
+    tag:
+      - digitalcore
+      - private
   other:
     tag:
       - other
