--- a/recyclarr/configs/radarr2.yml
+++ b/recyclarr/configs/radarr2.yml
@@ -38,12 +38,12 @@ radarr:
           # Uncomment the next six lines to allow x265 HD releases with HDR/DV
           - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
         quality_profiles:
-          - name: HD Bluray + WEB
+          - name: SQP-5
             score: 0
       - trash_ids:
           - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
         quality_profiles:
-          - name: HD Bluray + WEB
+          - name: SQP-5
 
       # Optional
       - trash_ids:
