--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -70,6 +70,10 @@ tracker:
     tag:
       - digitalcore
       - private
+  tlzdigital.com:
+    tag:
+      - tlzdigital
+      - private
   other:
     tag:
       - other
