--- a/recyclarr/configs/radarr.yml
+++ b/recyclarr/configs/radarr.yml
@@ -54,16 +54,16 @@ radarr:
         quality_profiles:
           - name: HD Bluray + WEB
 
-      - trash_ids:
-          # Uncomment the next six lines to allow x265 HD releases with HDR/DV
-          - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 0
-      - trash_ids:
-          - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
-        quality_profiles:
-          - name: HD Bluray + WEB
+      # - trash_ids:
+      #     # Uncomment the next six lines to allow x265 HD releases with HDR/DV
+      #     - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
+      #   quality_profiles:
+      #     - name: HD Bluray + WEB
+      #       score: 0
+      # - trash_ids:
+      #     - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
+      #   quality_profiles:
+      #     - name: HD Bluray + WEB
 
       # ===== Versions françaises =====
       # Activez ou désactiver les Formats Personnalisés suivant si vous souhaitez noter vos releases
