Added nginx and systemd config for VueTorrent backend

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ APP_CONFIG_PATH='~/.config'
 DISK_USAGE_PATH='/home/user/media'
 DISK_USAGE_THRESHOLD_GB=1000
 
+# qBittorrent
+QBIT_BASE="https://path.to/qbittorrent/"
+
 # Overseerr
 OVERSEERR_API_KEY='supersecretkey'
 OVERSEERR_URL='http://overseerr.url:5055'
