--- a/VueTorrent/vuetorrent-backend.service
+++ b/VueTorrent/vuetorrent-backend.service
@@ -7,7 +7,8 @@ OnFailure=notify_onFailure@%i.service
 WorkingDirectory=%h/blackpearrl/VueTorrent/vuetorrent-backend
 EnvironmentFile=%h/blackpearrl/.env
 Environment=PORT=38356
-ExecStart=npm start
+Environment=NODE_VERSION=20
+ExecStart=%h/.nvm/nvm-exec npm start
 Restart=always
 RestartSec=5
 
