Updated ygg trackekr

--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -60,7 +60,7 @@ cat:
 cat_change:
 
 tracker:
-  joinpeers|loadpeers|drago-server|drago-tracker:
+  joinpeers|loadpeers|drago-server|drago-tracker|maxp2p:
     tag:
       - private
       - yggtorrent
