Updated recyclarr configs

--- a/recyclarr/configs/radarr.yml
+++ b/recyclarr/configs/radarr.yml
@@ -33,13 +33,13 @@ radarr:
           - 9790a618cec1aeac8ce75601a17ea40d  # FR WEB Tier 01
           - 3c83a765f84239716bd5fd2d7af188f9  # FR WEB Tier 02
           - 0d94489c0d5828cd3bf9409d309fb32b  # FR Scene Groups
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
 
       # IMAX Enhanced
       - trash_ids:
           - 9f6cbff8cfe4ebbc1bde14c7b7bec0de # IMAX Enhanced
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             # score: 0 # Uncomment this line to disable prioritised IMAX Enhanced releases
 
@@ -51,18 +51,18 @@ radarr:
           # - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
           # - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
           # - f537cf427b64c38c8e36298f657e4828 # Scene
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
 
       # - trash_ids:
       #     # Uncomment the next six lines to allow x265 HD releases with HDR/DV
       #     - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
-      #   quality_profiles:
+      #   assign_scores_to:
       #     - name: HD Bluray + WEB
       #       score: 0
       # - trash_ids:
       #     - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
-      #   quality_profiles:
+      #   assign_scores_to:
       #     - name: HD Bluray + WEB
 
       # ===== Versions françaises =====
@@ -73,41 +73,41 @@ radarr:
       # https://trash-guides.info/Radarr/radarr-setup-quality-profiles-french-en/#french-audio-versions
       - trash_ids:
           - 404c08fd0bd67f39b4d8e5709319094e  # VFF
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 101
       - trash_ids:
           - 4cafa20d5584f6ba1871d1b8941aa3cb  # VOF
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 101
       - trash_ids:
           - 52772f1cad6b5d26c2551f79bc538a50  # VFI
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 101
       - trash_ids:
           - 29b5f7b1a5f20f64228786c3ab1bdc7d  # VF2
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 101
       - trash_ids:
           - b6ace47331a1d3b77942fc18156f6df6  # VFQ
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 0
       - trash_ids:
           - 95aa50f71a01c82354a7a2b385f1c4d8  # VQ
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 0
       - trash_ids:
           - b3fb499641d7b3c2006be1d9eb014cb3  # VFB
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 0
       - trash_ids:
           - 9172b2f683f6223e3a1846427b417a3d  # VOSTFR
-        quality_profiles:
+        assign_scores_to:
           - name: HD Bluray + WEB
             score: 0
