--- a/recyclarr/configs/sonarr2.yml
+++ b/recyclarr/configs/sonarr2.yml
@@ -15,8 +15,6 @@ sonarr:
     include:
       # Comment out any of the following includes to disable them
       - template: sonarr-quality-definition-anime
-      - template: sonarr-v4-quality-profile-anime
-      - template: sonarr-v4-custom-formats-anime
       - template: sonarr-v4-quality-profile-anime-vostfr
       - template: sonarr-v4-custom-formats-anime-vostfr
 
@@ -28,7 +26,7 @@ sonarr:
           - 026d5aadd1a6b4e550b134cb6c72b3ca # Uncensored
           - b2550eb333d27b75833e25b8c2557b38 # 10bit
           - 418f50b10f1907201b6cfdf881f467b7 # Anime Dual Audio
-        quality_profiles:
+        assign_scores_to:
           - name: Remux-1080p - Anime
             score: 10
           - name: VOSTFR-ANIME
