Updated .env template

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,25 @@
-# Server Name
 SERVER_NAME='Black Pearl'
 
 # Tautulli API
-TAUTULLI_URL='https://example.com/tautulli'
-TAUTULLI_API_KEY='agtdflgjksdf'
+TAUTULLI_URL='https://tautulli.local/'
+TAUTULLI_API_KEY='somekey'
 TAUTULLI_NOTIFIER_ID=2
 
 # PLEX settings
-PLEX_URL="http://plex.url:32400"
-PLEX_TOKEN="jdfklgdsfklg"
+PLEX_URL="http://plex.local:32400"
+PLEX_TOKEN="anotherkey"
+PLEX_SERVER_NAME="Black Pearl"
 
 # GitHub API
-GITHUB_TOKEN="kdlfmgjdsfklùgds"
+GITHUB_TOKEN="wowatoken"
 
 # Apps config location
 # Defaults to ~/.config if not set
-APP_CONFIG_PATH='~/.config'
+APP_CONFIG_PATH='/home/user/blackpearrl/scripts'
 
 # Disk Usage Notifier
 DISK_USAGE_PATH='/home/user/media'
 DISK_USAGE_THRESHOLD_GB=1000
 
 # qBittorrent
-QBIT_BASE="https://path.to/qbittorrent/"
-
-# Overseerr
-OVERSEERR_API_KEY='supersecretkey'
-OVERSEERR_URL='http://overseerr.url:5055'
+QBIT_BASE="https://qbittorrent.local/"
