--- a/recyclarr/configs/radarr.yml
+++ b/recyclarr/configs/radarr.yml
@@ -1,4 +1,15 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
+###################################################################################################
+# Recyclarr Configuration Template: FR HD Bluray + WEB                                            #
+# Updated: 2024-12-03                                                                             #
+# Documentation: https://recyclarr.dev                                                            #
+# Note: The following will be in French but hold basically the same info as the other template    #
+# ----------------------------------------------------------------------------------------------- #
+# Si vous utilisez plusieurs profiles dans une seule instance merci de vous référez               #
+# à la documentation suivante (en anglais) pour les combiner :                                    #
+# https://recyclarr.dev/wiki/yaml/config-examples/#merge-single-instance                          #
+###################################################################################################
+
+# Definition d'une instance : https://recyclarr.dev/wiki/yaml/config-reference/basic/
 radarr:
   radarr:
     delete_old_custom_formats: true
@@ -10,18 +21,24 @@ radarr:
         standard: default
 
     include:
-      # Comment out any of the following includes to disable them
       - template: radarr-quality-definition-movie
-      - template: radarr-quality-profile-hd-bluray-web
-      - template: radarr-custom-formats-hd-bluray-web
+      # Profile souhaité - veuillez à avoir les lignes correspondantes activées
+      # --- Profile VOSTFR ---
+      # - template: sonarr-v4-quality-profile-hd-bluray-web-french-vostfr
+      # - template: sonarr-v4-custom-formats-hd-bluray-web-french-vostfr
+      # --- Profile MULTi.VF ---
+      # - template: sonarr-v4-quality-profile-hd-bluray-web-french-multi-vf
+      # - template: sonarr-v4-custom-formats-hd-bluray-web-french-multi-vf
+      # --- Profile MULTi.VO ---
+      - template: radarr-quality-profile-hd-bluray-web-french-multi-vo
+      - template: radarr-custom-formats-hd-bluray-web-french-multi-vo
 
+    # Formats Personnalisés (Custom Formats) :
+    # https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
     custom_formats:
-      # =================================
-      # HD Bluray + WEB
-      # =================================
       # Movie Versions
       - trash_ids:
-      # Uncomment any of the following lines to prefer these movie versions
+      # Décommentez n'importe laquelle des lignes suivantes pour préférer ces versions de films
           - 570bc9ebecd92723d2d21500f4be314c # Remaster
           - eca37840c13c6ef2dd0262b141a5482f # 4K Remaster
           - e0c07d59beb37348e975a930d5e50319 # Criterion Collection
@@ -31,13 +48,13 @@ radarr:
           - eecf3a857724171f968a66cb5719e152 # IMAX
           - 9f6cbff8cfe4ebbc1bde14c7b7bec0de # IMAX Enhanced
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+          # - name: FR-MULTi-VF-HD
+          - name: FR-MULTi-VO-HD
 
-      # Optional
+      # Optionnels
+      # Ils sont optionnels et peuvent ne pas fonctionner correctement avec les profiles FR
       - trash_ids:
-          - e7718d7a3ce595f289bfee26adc178f5 # Proper/Repack
-          - ae43b294509409a6a13919dedd4764c4 # Repack2
-          - 5caaaa1c08c1742aa4342d8c4cc463f2 # Repack3
           # - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
           # - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
           # - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
@@ -45,53 +62,114 @@ radarr:
           # - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
           # - f537cf427b64c38c8e36298f657e4828 # Scene
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+          # - name: FR-MULTi-VF-HD
+          - name: FR-MULTi-VO-HD
 
+      # Décommentez les lignes suivantes pour accepter les releases en x265 HD avec du HDR/DV
       - trash_ids:
-          # Uncomment the next six lines to allow x265 HD releases with HDR/DV
           - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+            # score: 0
+          # - name: FR-MULTi-VF-HD
+            # score: 0
+          - name: FR-MULTi-VO-HD
             score: 0
       - trash_ids:
           - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+          # - name: FR-MULTi-VF-HD
+          - name: FR-MULTi-VO-HD
 
-      # ===== Language =====
+      # Décommenter le score associé si vous ne voulez pas de FanSUB.
       - trash_ids:
-          - 0542a48746585dc4444bbbb8a6bdf6ea # Language: Original + French
+          - 02e48d30a176c91baf9e15de05e5dc6a # FanSUB
         assign_scores_to:
-          - name: HD Bluray + WEB
-            score: 500
+          # - name: FR-VOSTFR-HD
+            # score: -10000
+          # - name: FR-MULTi-VF-HD
+            # score: -10000
+          # - name: FR-MULTi-VO-HD
+            # score: -10000
+
+      # ===== Versions françaises =====
+      # Activez ou désactiver les Formats Personnalisés suivant si vous souhaitez noter vos releases
+      # avec. Vous pouvez aussi leur attribuer un score en fonction de si vous souhaitez préférer un
+      # certain type d'audio français.
+      # Par exemple si vous préférez la VFF : VFF + VF2 à 101, VFQ à -101, le reste à 0.
+      # Pensez à vérifier aussi à quoi corresponde les différents types de version francophones :
+      # https://trash-guides.info/Radarr/radarr-setup-quality-profiles-french-en/#french-audio-versions
       - trash_ids:
-          - d6e9318c875905d6cfb5bee961afcea9 # Language: Not Original
+          - 404c08fd0bd67f39b4d8e5709319094e # VFF
         assign_scores_to:
-          - name: HD Bluray + WEB
-            score: -10000
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
+            score: 101
       - trash_ids:
-          - 533f782474f0819643c2ec0c1eeeb0ac # Language: Not French
+          - 4cafa20d5584f6ba1871d1b8941aa3cb # VOF
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
+            score: 101
+      - trash_ids:
+          - 52772f1cad6b5d26c2551f79bc538a50 # VFI
+        assign_scores_to:
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
             score: 0
       - trash_ids:
-          - 9172b2f683f6223e3a1846427b417a3d # VOSTFR
+          - 29b5f7b1a5f20f64228786c3ab1bdc7d # VF2
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
             score: 0
-
       - trash_ids:
-          # ===== HQ Release Groups =====
-          - 5322da05b19d857acc1e75be3edf47b3 # FR HD Bluray Tier 01
-          - 57f34251344be2e283fc30e00e458be6 # FR HD Bluray Tier 02
-          - 9790a618cec1aeac8ce75601a17ea40d # FR WEB Tier 01
-          - 3c83a765f84239716bd5fd2d7af188f9 # FR WEB Tier 02
-          - 0d94489c0d5828cd3bf9409d309fb32b # FR Scene Groups
-          - ed27ebfef2f323e964fb1f61391bcb35 # HD Bluray Tier 01
-          - c20c8647f2746a1f4c4262b0fbbeeeae # HD Bluray Tier 02
-          - 5608c71bcebba0a5e666223bae8c9227 # HD Bluray Tier 03
-          - c20f169ef63c5f40c2def54abaf4438e # WEB Tier 01
-          - 403816d65392c79236dcb6dd591aeda4 # WEB Tier 02
-          - af94e0fe497124d1f9ce732069ec8c3b # WEB Tier 03
+          - b6ace47331a1d3b77942fc18156f6df6 # VFQ
         assign_scores_to:
-          - name: HD Bluray + WEB
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
+            score: -101
+      - trash_ids:
+          - f7caa1942be5cc547c266bd3dbc2cda9 # VOQ
+        assign_scores_to:
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
+            score: -101
+      - trash_ids:
+          - 95aa50f71a01c82354a7a2b385f1c4d8 # VQ
+        assign_scores_to:
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
+            score: -101
+      - trash_ids:
+          - b3fb499641d7b3c2006be1d9eb014cb3 # VFB
+        assign_scores_to:
+          # - name: FR-VOSTFR-HD
+            # score: 101
+          # - name: FR-MULTi-VF-HD
+            # score: 101
+          - name: FR-MULTi-VO-HD
+            score: -101
