Updated sonarr2 profile

--- a/recyclarr/configs/radarr.yml
+++ b/recyclarr/configs/radarr.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 ###################################################################################################
 # Recyclarr Configuration Template: FR HD Bluray + WEB                                            #
 # Updated: 2024-12-03                                                                             #
